# dioxus-tailwind-template

./: .env.example  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml
.cargo/: config
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: lib.rs  main.rs
crates/frontend/: .gitignore  Cargo.toml  Dioxus.toml  index.html  package.json
crates/frontend/src/: lib.rs  main.rs  tailwind.config.js
