[package]
name = "{{project-name}}-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["crates/frontend", "crates/backend"]

[workspace.dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3"
dioxus-ssr = "0.3"

serde ={ version = "1", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1"
dotenvy = { version = "0.15.6" }
time = { version = "0.3", features = ["serde", "macros"] }

once_cell = "1.17.1"

[lib]

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"
test = false
bench = false

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"
test = false
bench = false
